First Commit : Tugas Module 5

--- a/Inline-CSS.html
+++ b/Inline-CSS.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Inline CSS</title>
 </head>
 <body>
-<p style="color:blue">Membuat tulisan berwarna biru</p>
-<p style="font-style:italic;">Membuat tulisan miring</p>   
+<p style="color:blue">Membuat tulisan warna biru</p>
+<p style="font-style:italic;">Membuat tulisan miring</p>
 </body>
 </html>
