--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Hasil latihan belajar CSS</h2>
     <p>
         <ol>
-            <li><a href="inline-CSS.html">Belajar Inline CSS</a></li>
+            <li><a href="Inline-CSS.html">Belajar Inline CSS</a></li>
             <li><a href="Embedded-CSS.html">Belajar Embedded CSS</a></li>
             <li><a href="External-CSS.html">Belajar External CSS</a></li>
             <li><a href="Class-Selector.html">Belajar Class Selector</a></li>
